# CareerPulse

./: .gitignore  pyproject.toml
data/: example.csv
src/: main.py  play.ipynb
src/career_pulse/: constants.py  process_job.py  structures.py
src/career_pulse/prompts/: classification_v1.txt  extraction_v1.txt
